Adicionado documentação swagger de packages
